--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  audioplayers:
+    path: ../../audioplayers
   audioplayers_notifications:
     path: ../
 
